// Copyright (c) 2018-2020 RTE (http://www.rte-france.com)
// See AUTHORS.txt
// This document is subject to the terms of the Creative Commons Attribution 4.0 International license.
// If a copy of the license was not distributed with this
// file, You can obtain one at https://creativecommons.org/licenses/by/4.0/.
// SPDX-License-Identifier: CC-BY-4.0


= Version SNAPSHOT

== Issues
* [OC-874] Send the card to a third server
* [OC-875] New endpoint cards/userCard to receive users cards
* [OC-876] User Service : Implement group in JWT Token Option
* [OC-402] As an Operator I want the archive screen to display an explicit message if no cards are found that match my filters
* [OC-868] As an admin I would like to be able to hide the time filtrer : https://opfab.github.io/documentation/current/deployment/#_web_ui
* [OC-900] Modifiy the CardPublication service with a new field : externalRecipients
* [OC-864] As a user I want to be able to reset archives filters so I can change my search criteria => Add a space between the search button and the Minutes field
* [OC-939] Synchronize timeline with feed (When a filter is set in the feed, it applies as well in the timeline (severity, tags or business period))


== Bugs
* [OC-772] Bug on archives screen: clear results when exiting archive page.
* [OC-898] In implicit mode, first name and last name are not displayed
* [OC-775] Cards details remain displayed when selecting another criteria that doesn't return any result

== Tasks
* [OC-836] Remove netflix stack (eureka registry server) and config server for users microservice
* [OC-838] Remove netflix stack (eureka registry server) and config server for cards-publication microservice
* [OC-892] Add in documentation that it is not possible to use dot in json field names
* [OC-845] Implement Git flow as our contribution and release workflow
+
_We have transitioned from a GitHub flow to a Git flow. See the documentation to see how it impacted our