@@ -1,21 +1,12 @@
-/* Copyright (c) 2018-2020, RTE (http://www.rte-france.com)
- * See AUTHORS.txt
- * This Source Code Form is subject to the terms of the Mozilla Public
- * License, v. 2.0. If a copy of the MPL was not distributed with this
- * file, You can obtain one at http://mozilla.org/MPL/2.0/.
- * SPDX-License-Identifier: MPL-2.0
- * This file is part of the OperatorFabric project.
- */
-
-import {Component, OnInit} from '@angular/core';
-import {Card, Detail, RecipientEnum} from '@ofModel/card.model';
-import {Store} from '@ngrx/store';
-import {AppState} from '@ofStore/index';
+import { Component, OnInit } from '@angular/core';
+import { Card, Detail, RecipientEnum } from '@ofModel/card.model';
+import { Store } from '@ngrx/store';
+import { AppState } from '@ofStore/index';
 import * as cardSelectors from '@ofStore/selectors/card.selectors';
-import {ThirdsService} from "@ofServices/thirds.service";
+import { ThirdsService } from "@ofServices/thirds.service";
 import { ClearLightCardSelection } from '@ofStore/actions/light-card.actions';
 import { Router } from '@angular/router';
-import {selectCurrentUrl} from '@ofStore/selectors/router.selectors';
+import { selectCurrentUrl } from '@ofStore/selectors/router.selectors';
 import { ThirdResponse } from '@ofModel/thirds.model';
 import { Map } from '@ofModel/map';
 import { UserService } from '@ofServices/user.service';
@@ -26,6 +17,8 @@ import { CardService } from '@ofServices/card.service';
 import {Subject} from 'rxjs';
 import {takeUntil} from 'rxjs/operators';
 
+import { User } from '@ofModel/user.model';
+import { id } from '@swimlane/ngx-charts';
 declare const ext_form: any;
 
 const RESPONSE_FORM_ERROR_MSG_I18N_KEY = 'response.error.form';
@@ -43,6 +36,7 @@ export class CardDetailsComponent implements OnInit {
 
     protected _i18nPrefix: string;
     card: Card;
+    user: User;
     details: Detail[];
     currentPath: any;
     responseData: ThirdResponse;
@@ -77,17 +71,22 @@ export class CardDetailsComponent implements OnInit {
         return this.responseData != null && this.responseData != undefined;
     }
 
+    get isActionEnabled(): boolean {
+        return this.card.entitiesAllowedToRespond.includes(this.user.entities[0]);;
+    }
+
+
     get i18nPrefix(): string {
         return this._i18nPrefix;
     }
-     
+
     get btnColor(): string {
         return this.thirdsService.getResponseBtnColorEnumValue(this.responseData.btnColor);
     }
-     
+
     get btnText(): string {
         return this.responseData.btnText ?
-                    this.i18nPrefix + this.responseData.btnText.key : RESPONSE_BUTTON_TITLE_I18N_KEY;
+            this.i18nPrefix + this.responseData.btnText.key : RESPONSE_BUTTON_TITLE_I18N_KEY;
     }
 
     get responseDataParameters(): Map<string> {
@@ -116,11 +115,12 @@ export class CardDetailsComponent implements OnInit {
                                 }
                             }
                         },
-                        error => console.log(`something went wrong while trying to fetch third for ${this.card.publisher} with ${this.card.publisherVersion} version.`))
-                    ;
+                        error => console.log(`something went wrong while trying to fetch third for ${this.card.publisher} with ${this.card.publisherVersion} version.`)
+                    );
                 }
             });
-            this.store.select(selectCurrentUrl)
+        
+        this.store.select(selectCurrentUrl)
             .pipe(takeUntil(this.unsubscribe$))
             .subscribe(url => {
                 if (url) {
@@ -128,6 +128,18 @@ export class CardDetailsComponent implements OnInit {
                     this.currentPath = urlParts[1];
                 }
             });
+
+        this.store.select(selectIdentifier)
+            .pipe(takeUntil(this.unsubscribe$))
+            .pipe(switchMap(userId => this.userService.askUserApplicationRegistered(userId))).subscribe(user => {
+                if(user){
+                    this.user = user
+                }
+            },
+                error => console.log(`something went wrong while trying to ask user application registered service with user id : ${id} `)
+            );
+
+
     }
     closeDetails() {
         this.store.dispatch(new ClearLightCardSelection());
@@ -138,6 +150,8 @@ export class CardDetailsComponent implements OnInit {
         this.responseData = $event;
     }
 
+
+
     submitResponse() {
 
         let formData = {};
@@ -147,60 +161,53 @@ export class CardDetailsComponent implements OnInit {
             (key in formData) ? formData[key].push(value) : formData[key] = [value];
         }
         console.log(formData);
-        
+
         ext_form.validyForm(formData);
-        
+
         if (ext_form.isValid) {
 
-            this.store.select(selectIdentifier)
-                .pipe(
-                    switchMap(id => this.userService.askUserApplicationRegistered(id))
-                )
-                .subscribe(user => {
+            const card: Card = {
+                uid: null,
+                id: null,
+                publishDate: null,
+                publisher: this.user.entities[0],
+                publisherVersion: this.card.publisherVersion,
+                process: this.card.process,
+                processId: this.card.processId,
+                state: this.responseData.state,
+                startDate: this.card.startDate,
+                endDate: this.card.endDate,
+                severity: Severity.INFORMATION,
+                entityRecipients: this.card.entityRecipients,
+                externalRecipients: [this.card.publisher],
+                title: this.card.title,
+                summary: this.card.summary,
+                data: formData,
+                recipient: {
+                    type: RecipientEnum.USER,
+                    identity: 'admin'
+                }
+                // parentCardId: this.card.id
+            }
 
-                    const card: Card = {
-                        uid: null,
-                        id: null,
-                        publishDate: null,
-                        publisher: user.entities[0],
-                        publisherVersion: this.card.publisherVersion,
-                        process: this.card.process,
-                        processId: this.card.processId,
-                        state: this.responseData.state,
-                        startDate: this.card.startDate,
-                        endDate: this.card.endDate,
-                        severity: Severity.INFORMATION,
-                        entityRecipients: this.card.entityRecipients,
-                        externalRecipients: [this.card.publisher],
-                        title: this.card.title,
-                        summary: this.card.summary,
-                        data: formData,
-                        recipient: {
-                            type: RecipientEnum.USER,
-                            identity: 'admin'
-                        }
-                        // parentCardId: this.card.id
+            this.cardService.postResponseCard(card)
+                .subscribe(
+                    rep => {
+                        console.log(rep);
+                        this.messages.formError.display = false;
+                        this.messages.submitSuccess.display = true;
+                    },
+                    err => {
+                        this.messages.submitError.display = true;
+                        console.error(err);
                     }
+                )
 
-                    this.cardService.postResponseCard(card)
-                        .subscribe(
-                            rep => {
-                                console.log(rep);
-                                this.messages.formError.display = false;
-                                this.messages.submitSuccess.display = true;
-                            },
-                            err => {
-                                this.messages.submitError.display = true;
-                                console.error(err);
-                            }
-                        )
-                });
-        
         } else {
 
             this.messages.formError.display = true;
             this.messages.formError.msg = (ext_form.formErrorMsg && ext_form.formErrorMsg != '') ?
-                                                ext_form.formErrorMsg : RESPONSE_FORM_ERROR_MSG_I18N_KEY;
+                ext_form.formErrorMsg : RESPONSE_FORM_ERROR_MSG_I18N_KEY;
         }
     }
 
